# iec61508-assurance-demo

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: 01_overview.rst  02_artifacts.rst  03_traceability.rst  04_checks.rst  05_metamodel.rst  06_workflow.rst  07_needflow.rst  conf.py  index.rst
docs/source/_static/: iec61508_metamodel.puml  iec61508_workflow.puml
site/: .buildinfo  01_overview.html  02_artifacts.html  03_traceability.html  04_checks.html  05_metamodel.html  06_workflow.html  07_needflow.html  genindex.html  index.html  objects.inv  schema_violations.json  search.html  searchindex.js
site/_sources/: 04_checks.rst
site/_static/: iec61508_metamodel.puml
